Created navbar component

--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div>
-  <h1>Dating App</h1>
-  <app-value></app-value>
-  <router-outlet></router-outlet>
-</div>
+<app-navbar></app-navbar>
+<h1>Dating App</h1>
+<app-value></app-value>
+<router-outlet></router-outlet>
