--- a/DatingApp-SPA/src/app/components/navbar/navbar.component.html
+++ b/DatingApp-SPA/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,16 @@
     </li>
   </ul>
 
-  <form #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+  <div *ngIf="loggedIn()" class="dropdown">
+    <a class="dropdown-toggle text-light">Welcome User</a>
+    <div class="dropdown-menu">
+      <a class="dropdown-item"><i class="fa fa-user"></i> Edit Profile</a>
+      <div class="drowpdown-divider"></div>
+      <a class="dropdown-item"><i class="fa fa-sign-out"></i> Logout</a>
+    </div>
+  </div>
+
+  <form #loginForm="ngForm"  *ngIf="!loggedIn()" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
     <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username" required
       [(ngModel)]="model.username">
     <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password" required
