--- a/DatingApp-SPA/src/app/components/navbar/navbar.component.html
+++ b/DatingApp-SPA/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand">Dating App</a>
+  <a class="navbar-brand text-light">Dating App</a>
 
   <ul class="navbar-nav mr-auto">
     <li class="nav-item" routerLinkActive="active">
@@ -14,7 +14,7 @@
   </ul>
 
   <div *ngIf="loggedIn()" class="dropdown">
-    <a class="dropdown-toggle text-light">Welcome User</a>
+    <a class="dropdown-toggle text-light">Welcome {{ authService.decodeToken?.unique_name | titlecase }}</a>
     <div class="dropdown-menu">
       <a class="dropdown-item"><i class="fa fa-user"></i> Edit Profile</a>
       <div class="drowpdown-divider"></div>
