--- a/DatingApp-SPA/src/app/components/navbar/navbar.component.html
+++ b/DatingApp-SPA/src/app/components/navbar/navbar.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
-    <a class="navbar-brand text-light">Dating App</a>
+    <a [routerLink]="['/home']" routerLinkActive="router-link-active"  class="navbar-brand text-light">Dating App</a>
 
     <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" href='#'>Matches</a>
+        <a [routerLink]="['/members']" class="nav-link" href='#'>Matches</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" href='#'>Lists</a>
+        <a [routerLink]="['/lists']" class="nav-link" href='#'>Lists</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" href='#'>Messages</a>
+        <a [routerLink]="['/messages']" class="nav-link" href='#'>Messages</a>
       </li>
     </ul>
 
