--- a/DatingApp-SPA/src/app/components/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/components/members/member-edit/member-edit.component.html
@@ -57,7 +57,7 @@
             </form>
           </tab>
           <tab heading="Edit Photo">
-            [EDIT PHOTOS]
+            <app-photo-editor [photos]="user.photos"></app-photo-editor>
           </tab>
         </tabset>
       </div>
