--- a/DatingApp-SPA/src/app/components/members/photo-editor/photo-editor.component.html
+++ b/DatingApp-SPA/src/app/components/members/photo-editor/photo-editor.component.html
@@ -2,8 +2,11 @@
   <div class="col-sm-2" *ngFor="let photo of photos">
     <img src="{{photo.url}}" class="img-thumbnail p-1" alt="">
     <div class="text-center">
-      <button class="btn btn-sm" type="button">Main</button>
-      <button class="btn btn-danger" type="button"><i class="fa fa-trash"></i></button>
+      <button class="btn btn-sm mr-1" type="button" (click)="setMainPhoto(photo)" 
+        [disabled]="photo.isMain" [ngClass]="photo.isMain ? 'btn-success active' : 'btn-secondary'">
+        Main
+      </button>
+      <button class="btn btn-sm btn-danger" type="button"><i class="fa fa-trash"></i></button>
     </div>
   </div>
 </div>
