--- a/DatingApp-SPA/src/app/components/members/photo-editor/photo-editor.component.html
+++ b/DatingApp-SPA/src/app/components/members/photo-editor/photo-editor.component.html
@@ -6,7 +6,9 @@
         [disabled]="photo.isMain" [ngClass]="photo.isMain ? 'btn-success active' : 'btn-secondary'">
         Main
       </button>
-      <button class="btn btn-sm btn-danger" type="button"><i class="fa fa-trash"></i></button>
+      <button class="btn btn-sm btn-danger" type="button" (click)="deletePhoto(photo)" [disabled]="photo.isMain">
+        <i class="fa fa-trash"></i>
+      </button>
     </div>
   </div>
 </div>
