--- a/DatingApp-SPA/src/app/components/register/register.component.html
+++ b/DatingApp-SPA/src/app/components/register/register.component.html
@@ -1,4 +1,4 @@
-<form #registerForm="ngForm" (ngSubmit)="register()">
+<!-- <form #registerForm="ngForm" (ngSubmit)="register()">
   <h2 class="text-center text-primary">Sign Up</h2>
   <hr>
   <div class="form-group">
@@ -11,4 +11,24 @@
     <button [disabled]="!registerForm.valid" class="btn btn-success" type="submit">Register</button>
     <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
   </div>
+</form> -->
+
+<form [formGroup]="registerForm" (ngSubmit)="register()">
+  <h2 class="text-center text-primary">Sign Up</h2>
+  <hr>
+  <div class="form-group">
+    <input type="text" class="form-control" placeholder="Username" formControlName="username">
+  </div>
+  <div class="form-group">
+    <input type="password" class="form-control" placeholder="Password" formControlName="password">
+  </div>
+  <div class="form-group">
+    <input type="password" class="form-control" placeholder="Confirm Password" formControlName="confirmPassword">
+  </div>
+  <div class="form-group text-center">
+    <button [disabled]="!registerForm.valid" class="btn btn-success" type="submit">Register</button>
+    <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
+  </div>
 </form>
+
+<p>{{registerForm.status| json}}</p>
