--- a/DatingApp-SPA/src/app/components/register/register.component.html
+++ b/DatingApp-SPA/src/app/components/register/register.component.html
@@ -17,13 +17,38 @@
   <h2 class="text-center text-primary">Sign Up</h2>
   <hr>
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="Username" formControlName="username">
+    <input type="text" class="form-control" placeholder="Username" formControlName="username"
+      [ngClass]="{'is-invalid': registerForm.get('username').errors && registerForm.get('username').touched}">
+    <div class="invalid-feedback">Username is required</div>
   </div>
   <div class="form-group">
-    <input type="password" class="form-control" placeholder="Password" formControlName="password">
+    <input type="password" class="form-control" placeholder="Password" formControlName="password"
+      [ngClass]="{'is-invalid': registerForm.get('password').errors && registerForm.get('password').touched}">
+    <div class="invalid-feedback"
+      *ngIf="registerForm.get('password').hasError('required') && registerForm.get('password').touched">
+      Password is required
+    </div>
+    <div class="invalid-feedback"
+      *ngIf="registerForm.get('password').hasError('minlength') && registerForm.get('password').touched">
+      Password must be 6-10 characters
+    </div>
+    <div class="invalid-feedback"
+      *ngIf="registerForm.get('password').hasError('maxlength') && registerForm.get('password').touched">
+      Password must be 6-10 characters
+    </div>
   </div>
   <div class="form-group">
-    <input type="password" class="form-control" placeholder="Confirm Password" formControlName="confirmPassword">
+    <input type="password" class="form-control" placeholder="Confirm Password" formControlName="confirmPassword"
+      [ngClass]="{'is-invalid': registerForm.get('confirmPassword').errors && registerForm.get('confirmPassword').touched ||
+      registerForm.hasError('mismatch') && registerForm.get('confirmPassword').touched}">
+    <div class="invalid-feedback"
+      *ngIf="registerForm.get('confirmPassword').hasError('required') && registerForm.get('confirmPassword').touched">
+      Password confirmation is required
+    </div>
+    <div class="invalid-feedback"
+      *ngIf="registerForm.hasError('mismatch') && registerForm.get('confirmPassword').touched">
+      Passwords do not match
+    </div>
   </div>
   <div class="form-group text-center">
     <button [disabled]="!registerForm.valid" class="btn btn-success" type="submit">Register</button>
