--- a/DatingApp-SPA/src/app/components/members/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/components/members/member-list/member-list.component.html
@@ -1,5 +1,27 @@
-<div class="container mt-5">
-  <div class="row">
+<div class="text-center mt-3">
+  <h2>Your matches - {{ pagination.totalItems }} found</h2>
+</div>
+
+<div class="container mt-3 mb-5">
+  <form novalidate #form="ngForm" (ngSubmit)="loadUsers()" class="form-inline mb-4 d-flex justify-content-center">
+    <div class="form-group">
+      <label for="minAge">Age From</label>
+      <input type="number" class="form-control ml-1" style="width: 70px" name="minAge" [(ngModel)]="userParams.minAge">
+    </div>
+    <div class="form-group px-2">
+      <label for="minAge">Age To</label>
+      <input type="number" class="form-control ml-1" style="width: 70px" name="maxAge" [(ngModel)]="userParams.maxAge">
+    </div>
+    <div class="form-group px-2">
+      <label for="minAge">Show</label>
+      <select type="number" class="form-control ml-1" style="width: 130px" [(ngModel)]="userParams.gender" name="gender">
+        <option *ngFor="let gender of genderList" [value]="gender.value">{{gender.display}}</option>
+      </select>
+    </div>
+    <button class="btn btn-primary ml-1" type="submit">Apply Filters</button>
+    <button class="btn btn-info ml-1" type="button" (click)="resetFilters()">Reset Filters</button>
+  </form>
+  <div class="row d-flex justify-content-center flex-wrap">
     <div *ngFor="let user of users" class="col-lg-2 col-md-3 col-sm-6">
       <app-member-card [user]="user"></app-member-card>
     </div>
@@ -8,8 +30,7 @@
 
 <div class="d-flex justify-content-center">
   <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
-    [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)"
-    previousText="&lsaquo;" nextText="&rsaquo;"
+    [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)" previousText="&lsaquo;" nextText="&rsaquo;"
     firstText="&laquo;" lastText="&raquo;">
   </pagination>
 </div>
