--- a/DatingApp-SPA/src/app/components/members/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/components/members/member-list/member-list.component.html
@@ -14,12 +14,22 @@
     </div>
     <div class="form-group px-2">
       <label for="minAge">Show</label>
-      <select type="number" class="form-control ml-1" style="width: 130px" [(ngModel)]="userParams.gender" name="gender">
+      <select type="number" class="form-control ml-1" style="width: 130px" [(ngModel)]="userParams.gender"
+        name="gender">
         <option *ngFor="let gender of genderList" [value]="gender.value">{{gender.display}}</option>
       </select>
     </div>
-    <button class="btn btn-primary ml-1" type="submit">Apply Filters</button>
-    <button class="btn btn-info ml-1" type="button" (click)="resetFilters()">Reset Filters</button>
+    <button class="btn btn-primary ml-1" type="submit">Apply</button>
+    <button class="btn btn-info ml-1" type="button" (click)="resetFilters()">Reset</button>
+    <div class="col">
+      <div class="btn-group float-right">
+        <button type="button" class="btn btn-primary" name="orderBy" btnRadio="lastActive"
+          [(ngModel)]="userParams.orderBy" (click)="loadUsers()">Last
+          Active</button>
+        <button type="button" class="btn btn-primary" name="orderBy" btnRadio="created"
+          [(ngModel)]="userParams.orderBy" (click)="loadUsers()">Newest Members</button>
+      </div>
+    </div>
   </form>
   <div class="row d-flex justify-content-center flex-wrap">
     <div *ngFor="let user of users" class="col-lg-2 col-md-3 col-sm-6">
