--- a/DatingApp-SPA/src/app/components/lists/lists.component.html
+++ b/DatingApp-SPA/src/app/components/lists/lists.component.html
@@ -1,1 +1,27 @@
-<p>lists works!</p>
+<div class="text-center mt-3">
+  <h2>{{likesParams == "Likers" ? "Your admirers:" : "Your picks & interests:"}} 
+    <span>{{ users.length }}</span>
+  </h2>
+</div>
+
+<div class="container mt-3">
+  <div class="row  mb-4 d-flex justify-content-center">
+    <div class="btn-group">
+      <button class="btn btn-primary" btnRadio="Likers" [(ngModel)]="likesParams" (click)="loadUsers()">Your admirers</button>
+      <button class="btn btn-primary" btnRadio="Likees" [(ngModel)]="likesParams" (click)="loadUsers()">Your likes</button>
+    </div>
+  </div>
+
+  <div class="row d-flex justify-content-center flex-wrap">
+    <div *ngFor="let user of users" class="col-lg-2 col-md-3 col-sm-6">
+      <app-member-card [user]="user"></app-member-card>
+    </div>
+  </div>
+</div>
+
+<div class="d-flex justify-content-center">
+  <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
+    [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)" previousText="&lsaquo;" nextText="&rsaquo;"
+    firstText="&laquo;" lastText="&raquo;">
+  </pagination>
+</div>
