--- a/DatingApp-SPA/src/app/components/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/components/members/member-detail/member-detail.component.html
@@ -49,7 +49,7 @@
             <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
           </tab>
           <tab heading="Messages">
-            [Messages]
+            <app-member-messages [recipientId]="user.id" ></app-member-messages>
           </tab>
         </tabset>
       </div>
