--- a/DatingApp-SPA/src/app/components/members/member-messages/member-messages.component.html
+++ b/DatingApp-SPA/src/app/components/members/member-messages/member-messages.component.html
@@ -1,1 +1,55 @@
-<p *ngFor="let message of messages">{{message.content}}</p>
+<div class="card">
+  <div class="card-body">
+    <div *ngIf="messages?.length === 0">
+      <p>No messages yet...</p>
+    </div>
+
+    <ul class="chat">
+      <li *ngFor="let message of messages">
+        <!-- to them -->
+        <div *ngIf="message.senderId == recipientId">
+          <span class="chat-img float-left">
+            <img src="{{message.senderPhotoUrl}}" alt="{{message.senderKnownAs}}" class="rounded-circle">
+          </span>
+          <div class="chat-body">
+            <div class="header">
+              <strong class="primary-font">{{message.senderKnownAs}}</strong>
+              <span class="text-muted float-right">
+                <span class="fas fa-clock"> {{message.messageSent | timeAgo }}</span>
+              </span>
+            </div>
+            <p>{{message.content}}</p>
+          </div>
+        </div>
+
+        <!-- to me -->
+        <div *ngIf="message.senderId != recipientId">
+          <span class="chat-img float-right">
+            <img src="{{message.senderPhotoUrl}}" alt="{{message.senderKnownAs}}" class="rounded-circle">
+          </span>
+          <div class="chat-body">
+            <div class="header">
+              <span class="text-muted">
+                <span class="fas fa-clock"> {{message.messageSent | timeAgo }}</span>
+                <span *ngIf="!message.isRead" class="text-danger"> (Unread)</span>
+                <span *ngIf="message.isRead" class="text-success"> (Read {{message.dateRead | timeAgo }}</span>
+              </span>
+              <strong class="primary-font float-right">{{message.senderKnownAs}} </strong>
+            </div>
+            <p>{{message.content}}</p>
+          </div> 
+        </div>
+      </li>
+    </ul>
+    <div class="card-footer">
+      <form action="">
+        <div class="input-group">
+          <input type="text" class="form-control input-sm" placeholder="Send a private message">
+          <div class="input-group-append">
+            <button class="btn btn-primary">Send</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
