--- a/DatingApp-SPA/src/app/components/members/member-messages/member-messages.component.html
+++ b/DatingApp-SPA/src/app/components/members/member-messages/member-messages.component.html
@@ -32,7 +32,7 @@
               <span class="text-muted">
                 <span class="fas fa-clock"> {{message.messageSent | timeAgo }}</span>
                 <span *ngIf="!message.isRead" class="text-danger"> (Unread)</span>
-                <span *ngIf="message.isRead" class="text-success"> (Read {{message.dateRead | timeAgo }}</span>
+                <span *ngIf="message.isRead" class="text-success"> (Read {{message.dateRead | timeAgo }})</span>
               </span>
               <strong class="primary-font float-right">{{message.senderKnownAs}} </strong>
             </div>
